selfhost/test/lexer/ints_error_leading_zero.out
Error at %FILE_NAME%:1:2
Unexpected character '1':
  |  0123
      ^